# inlet

./: Cargo.toml  Makefile  README.md
src/: cli.rs  commands.rs  dependencies.rs  main.rs
src/codegen/: axum_auth.rs  axum_snippets.rs  main_fn.rs  migration_file.rs  mod.rs  queries.rs
